samples/SEMANTIC_ERROR/division_by_zero_float.php
<?php
declare(strict_types=1);
//ERROR[8]
$a = 1 / 0.0;